samples/_failures_safe/1761331433_4c1adb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8d1eef5c.c: In function ‘main’:
./samples/SAFE/__tmp_8d1eef5c.c:154:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  154 |     size_t len
      |     ^~~~~~
./samples/SAFE/__tmp_8d1eef5c.c:154:5: error: expected declaration or statement at end of input
